--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <header>
         <nav>
             <img src="https://storage.googleapis.com/jp-content/logo_original_positiv_by_GCB_620b137c8d/logo-original-positiv_by-GCB.svg_logo_original_positiv_by_GCB_620b137c8d.svg" id="navslika">
+            <button type="submit" id="register">REGISTER</button>
             <button id="login">LOGIN</button>
-            <button type="submit" id="register">Register</button>
+
 
         </nav>
     </header>
     <div>
-        <img src="slikapodnav.png" id="slikapodnav">
+        <img src="slikapodnav.png" id="slikapodnav">    
     </div>
 
     <div id="registerModal" class="modal">
@@ -55,12 +56,24 @@
         </div>
     </div>
 
-    <!-- <div id="nextthing" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>hey</h2>
+
+
+    <div class="igri">
+        <div style="font-size: 30px; font-weight: 800; padding-top: 20px; padding-left: 20px;"><i>MOST POPULAR</i></div>
+        <span class="slikata"><img src="https://qph.cf2.quoracdn.net/main-qimg-dd422653178be404398cf9ba63336509-lq" id="slika"></span>
+        <div id="textbox">
+            <div id="imetoNaIgrata">Book of Ra Deluxe</div>
+            <div id="minmax"><b>Min:</b> 0.01CHF | <b>Max:</b> 50.00 CHF</div>
         </div>
-    </div> -->
+    </div>
+
+    <div id="prazno">
+
+    </div>
+
+    <div class="igri">
+
+    </div>
 
     <script src="app.js"></script>
 </body>
